# helloWorld

./: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp  testclass.cpp  testclass.h
cpp/: hekaton.cpp  hekaton_cpy.cpp  helper.cpp  helper2.cpp  main.cpp  main4.cpp  main5.cpp  print_greetings.cpp  saybye.cpp  sayhello.cpp  vl4.cpp
hpp/: saybye.hpp  sayhello.hpp  vl4.h
lecture/: autoUseCase.cpp  lvalues.cpp
spn/notes/: CODE_STRUCTURE.cpp  QUESTIONS.cpp  QUESTIONS.txt  TODO.cpp
spn/res/tables/kmeans/: Mall_customer_kmeans_res2.csv
spn/src/algorithms/cpp/: alg1.cpp  cca.cpp  clusterSamplesRDC.cpp  directedGraph.cpp  dlibTable.cpp  kmeans.cpp  learnMSPN.cpp  mainAlg.cpp  mainAlgorithm.cpp  phis.cpp  rdcTransform.cpp  splitFeaturesRDC.cpp  util.cpp
spn/src/algorithms/h/: alg1.h  kmeans.h  mainAlg.h  mainAlgorithm.h  phis.h  rdcTransform.h  splitFeaturesRDC.h  util.h
spn/src/cpp/: csvImporter.cpp  main.cpp  myObjects.cpp  util.cpp
spn/src/deprecated/: dlibRdcTransform.cpp  dlibRdcTransform.h  tableGenerator.cpp  tableGenerator.h
spn/src/deprecated/algorithms/cpp/: phis.cpp  rdcTransform.cpp
spn/src/deprecated/algorithms/h/: clusterSamplesRDC.h  learnMSPN.h  phis.h  splitFeaturesRDC.h
spn/src/deprecated/persistence/cpp/: csvImporter.cpp
spn/src/deprecated/persistence/h/: csvImporter.h
spn/src/deprecated/util/cpp/: column.cpp  table.cpp
spn/src/deprecated/util/h/: column.h
spn/src/generators/cpp/: eigen.cpp  mainGen.cpp  mainGenerator.cpp  numberGenerator.cpp  tableGenerator.cpp
spn/src/generators/h/: mainGen.h  mainGenerator.h  numberGenerator.h  tableGenerator.h
spn/src/h/: csvImporter.h  main.h  myObjects.h  util.h
spn/src/main/cpp/: main.cpp
spn/src/main/h/: main.h
spn/src/persistence/cpp/: csvImporter.cpp  csvImporter2.cpp
spn/src/persistence/h/: csvImporter.h
spn/src/test/cpp/: cca.cpp  testNormal.cpp
spn/src/test/h/: cca.h
spn/src/util/cpp/: column.cpp  directedGraph.cpp  dlibTable.cpp  point.cpp  table.cpp  util.cpp
spn/src/util/h/: column.h  directedGraph.h  dlibTable.h  point.h  table.h  util.h
tutorial/: QUESTIONS.cpp  TODO.cpp
tutorial/0_basics/: dataTypeSize.cpp  inputOutput.cpp  passArgs.cpp
tutorial/10_polymorphism/: abstracts.cpp  friends.cpp  poly.cpp  structs.cpp
tutorial/11_operator_&_file_IO/: io.cpp  io2.cpp  operators.cpp
tutorial/12_advanced_functions/: functionsAsObjects.cpp  functionsAsObjects2.cpp  functionsAsObjects3.cpp
tutorial/13_preprocessor_&_templates_ &_iterators/: Animal.h  iterators.cpp  main.cpp  preprocessor.cpp  templates.cpp  templates2.cpp
tutorial/14_smart_pointers_&_polymorphic_templates/: memory.cpp  memory2.cpp  polymorphicTemplates.cpp
tutorial/15_threads/: threads2.cpp  threads3.cpp  threads4.cpp
tutorial/16_sequence_containers/: deque.cpp  forwardList.cpp  list.cpp
tutorial/17_associate_containers_enums_adapters/: enum.cpp  map.cpp  multimap.cpp  multiset.cpp  priorityQueue.cpp  queue.cpp  set.cpp  stack.cpp
tutorial/18_regular_expressions/: basics.cpp  basics2.cpp  basics3.cpp  problem.cpp
tutorial/19_regex_II/: basics4.cpp
tutorial/1_containers/: arraysAndVectors.cpp
tutorial/20_regex_III/: basics5.cpp
tutorial/2_pointers/: pointer.cpp  pointerAndArray.cpp  pointerAndFunction.cpp  problem.cpp  problem2.cpp
tutorial/3_exceptions/: exception.cpp  problem1.cpp
tutorial/4_strings/: mathFunctions.cpp  problem.cpp  string.cpp
tutorial/5_problems/: problems.cpp  problems2.cpp
tutorial/6_problems/: problems3.cpp  problems4.cpp
tutorial/7_recursion_&_overload/: overload.cpp  recursion.cpp
tutorial/8_lambdas/: lambda.cpp  ternary_operator.cpp
tutorial/9_objects/: animals.cpp  warriors.cpp
tutorial/threads/: threads.cpp  threads4.cpp
